ingresses/2-proxy/base/customers/api-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-customers
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`api.demo.demo.traefiklabs.tech`) && PathPrefix(`/customers`) && Method(`POST`)
      services:
        - name: customer-app
          port: 3000
    - kind: Rule
      match: Host(`api.demo.demo.traefiklabs.tech`) && PathPrefix(`/customers`) && Method(`GET`)
      services:
        - name: customer-app
          port: 3000
